--- a/changes.txt
+++ b/changes.txt
@@ -41,6 +41,7 @@ Contents
 4.2  sm.erl
 4.3  gen_esme_session.erl
 4.4  gen_esme.erl
+4.5  smpp_globals.hrl
 
 ---
 
@@ -267,27 +268,29 @@ How these changes affected individual files is described below.
 
 - Functions reply_destination_address/1, reply_source_address/1 and
   reply_addresses/1 added.
-
   reply_address/1 will be removed in future releases, please use 
   reply_destination_address/1 instead.
+- Functions set_udhi/1 and split_user_data/2 added.
+
 
 4.3  gen_esme_session.erl
 
 - New callback  handle_enquire_link_failure/3 added.
-  
   See http://sourceforge.net/forum/forum.php?thread_id=1206343&forum_id=350015
-
 - Use proc_lib:spawn_link/1 instead of spawn_link.
 
-4.4  gen_esme_session.erl
+
+4.4  gen_esme.erl
 
 - New callback handle_enquire_link_failure/2 added.
-
   See http://sourceforge.net/forum/forum.php?thread_id=1206343&forum_id=350015
-
 - handle_alert_notification/2 must have only 2 parameters and not 3, as 
   previously declared in behaviour_info/1.
-
 - Functions session_start_link/2 and session_start_link/3 added.
-
 - Use proc_lib:spawn_link/1 instead of spawn_link.
+- Function submit_sm/3 added.
+
+
+4.5  smpp_globals.hrl
+
+- SM_MAX_SIZE and SM_SEGMENT_MAX_SIZE macros defined.
