--- a/changes.txt
+++ b/changes.txt
@@ -258,11 +258,17 @@ How these changes affected individual files is described below.
 
 4.   Changes 1.1 -> 1.2
 
+- Removed unused vars warnings.
+
+See other changes on individual files below.
+
+
 4.1  smpp_base.hrl
 
 - ESM_CLASS_DOMAIN fixed.  Thanks to hfventer for this fix.  
   The max values were less than the min values! Without this it would be 
   impossible to send binary content messages (like ring tones or WAP push).
+
 
 4.2  sm.erl
 
@@ -270,7 +276,12 @@ How these changes affected individual files is described below.
   reply_addresses/1 added.
   reply_address/1 will be removed in future releases, please use 
   reply_destination_address/1 instead.
-- Functions set_udhi/1 and split_user_data/2 added.
+- Functions udhi/1 and udhi/2 added.
+- Function split_user_data/2 implemented.
+- Function chop_udh/1 implemented.
+- Function reference_number/1 implemented.
+- Function join_user_data/1 added.
+- Function total_segments/1 implemented.
 
 
 4.3  gen_esme_session.erl
@@ -289,9 +300,10 @@ How these changes affected individual files is described below.
   previously declared in behaviour_info/1.
 - Functions session_start_link/2 and session_start_link/3 added.
 - Use proc_lib:spawn_link/1 instead of spawn_link.
-- Function submit_sm/3 added.
+- Functions submit_sm/3 and	submit_multi/3 added.
 
 
 4.5  smpp_globals.hrl
 
 - SM_MAX_SIZE and SM_SEGMENT_MAX_SIZE macros defined.
+
